work-panels - adjusting positioning to fix scroll issue on iphone

--- a/scss/components/_work-panels.scss
+++ b/scss/components/_work-panels.scss
@@ -1,5 +1,5 @@
 .project-panels {
-  position: fixed;
+  position: absolute;
   top: 0;
   border-left: .1rem solid var(--color-black);
   box-shadow: -5px 0px 8px -1px rgba(0,0,0,0.75);
@@ -25,7 +25,7 @@
   top: 5.5rem;
   display: none;
   width: 50%;
-  min-height: 200%;
+  min-height: 100%;
   background-color: var(--color-dark-grey);
   z-index: 1;
 
@@ -129,6 +129,9 @@
 }
 
 .description {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   width: 100%;
   padding-top: 5rem;
   padding-bottom: 3rem;
@@ -151,6 +154,7 @@
 }
 
 .tools-wrapper {
+  margin-top: -2rem;
   padding: 2.5rem 0;
   background-color: var(--color-dark-grey);
 
